test/data/invalid_models/include_with_specific_file_in_uri/model.sdf
<?xml version="1.0" ?>
<sdf version="1.5">
    <model name="simple test model">
        <include>
            <uri>model://test/model.sdf</uri>
        </include>
    </model>
</sdf>
